[metadata]
name = ceph-bootstrap
summary = CLI tool to bootstrap Ceph clusters
description-file =
    README.md
    CHANGES.md
home-page = https://github.com/SUSE/ceph-bootstrap
requires-dist = setuptools
license = MIT License
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: Utilities

[options]
install_requires =
    Click >= 6.7
    configshell-fb >= 1.1
    pycryptodomex >= 3.4.6
    PyYAML >= 5
    salt >= 2019.2.0

packages =
    ceph_bootstrap
    ceph_bootstrap.validate

tests_require =
    pytest

setup_requries =
    pytest-runner

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    ceph-bootstrap = ceph_bootstrap:ceph_bootstrap_main

[options.extras_require]
dev =
    mock==3.0.5
    pycodestyle==2.5.0
    pyfakefs==3.7
    pylint==2.4.4
    pytest==5.3.1
    pytest-cov==2.8.1
    pytest-runner==5.2

[pycodestyle]
max-line-length = 100
ignore =
    W605

[tool:pytest]
testpaths = tests

[coverage:paths]
source =
    ceph_bootstrap

[coverage:run]
omit =
    tests/*
    */python*/*

